kubernetes/apps/authentik/authentik/ldap_route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ak-outpost-ldap
spec:
  entryPoints:
    - ldap
  routes:
  - match: Host(`ldap.{$SECRET_DOMAIN}`)
    kind: Rule
    services:
    - name: ak-outpost-ldap
      port: 389

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ak-outpost-ldaps
spec:
  entryPoints:
    - ldaps
  routes:
  - match: Host(`ldap.{$SECRET_DOMAIN}`)
    kind: Rule
    services:
    - name: ak-outpost-ldap  # Handle termination here instead of backend
      port: 389
  tls:
    certResolver: le
    domains:
    - main: ldap.{$SECRET_DOMAIN}
